# mp4v2

./: .gitignore  CHANGES.logging  CMakeLists.txt  GNUmakefile  GNUmakefile.am  GNUmakefile.in  README  README.md  aclocal.m4  androidBuildReleaseLibs.sh  config.status  configure  libmp4v2.la  libtool  macBuildLibs.sh  macBuildReleaseLibs.sh
doc/: Authors.txt  BuildRepository.txt  BuildSource.txt  Documentation.txt  ReleaseNotes.txt  ToolGuide.txt
doc/man/man1/: mp4art.1  mp4file.1  mp4subtitle.1  mp4track.1
hudson/: buildWin.bat
include/mp4v2/: file.h  general.h  mp4v2.h  platform.h  project.h  sample.h  track.h  track_prop.h
lib/: libmp4v2.2.dylib  libmp4v2.dylib  libmp4v2.exp  libmp4v2.la  libmp4v2.lai  libmp4v2.lib
lib/libmp4v2.2.dylib.dSYM/Contents/: Info.plist
libplatform/: config.h  config.h.in  platform.h  platform_win32.cpp  platform_win32.h  platform_win32_impl.h  stamp-h1  targetver.h
libplatform/io/: File.cpp  File.h  FileSystem_win32.cpp  File_posix.cpp  File_win32.cpp
libutil/: TrackModifier.cpp  Utility.cpp
mp4v2-2.0.0.xcodeproj/: project.pbxproj
mp4v2-Mac/mp4v2.xcodeproj/: project.pbxproj
mp4v2-Win/: mp4v2.autopkg  mp4v2.sln
mp4v2-Win/include/mp4v2/: project.h
mp4v2-Win/libmp4v2/: Version.rc  libmp4v2.vcxproj
mp4v2-Win/mp4art/: mp4art.vcxproj
mp4v2-Win/mp4chaps/: mp4chaps.vcxproj
mp4v2-Win/mp4extract/: mp4extract.vcxproj
mp4v2-Win/mp4file/: mp4file.vcxproj
mp4v2-Win/mp4info/: mp4info.vcxproj
mp4v2-Win/mp4subtitle/: mp4subtitle.vcxproj
mp4v2-Win/mp4tags/: mp4tags.vcxproj
mp4v2-Win/mp4track/: mp4track.vcxproj
mp4v2-Win/mp4trackdump/: mp4trackdump.vcxproj
mp4v2-Win/runner/: runner.cpp  runner.vcxproj  runner.vcxproj.filters
project/: project.m4  project.m4sugar
src/: atom_ftyp.cpp  atom_hvc1.cpp  atom_mp4v.cpp  atom_rtp.cpp  atom_sdp.cpp  atom_sound.cpp  atom_standard.cpp  atom_vp09.cpp  atoms.h  exception.h  log.cpp  mp4.cpp  mp4array.h  mp4atom.cpp  mp4atom.h  mp4container.cpp  mp4descriptor.cpp  mp4file.cpp  mp4file.h  mp4file_io.cpp  mp4property.cpp  mp4property.h  mp4track.cpp  mp4track.h  mp4util.cpp  mp4util.h  rtphint.cpp
src/itmf/: Tags.cpp  type.cpp
util/: mp4chaps.cpp  mp4tags.cpp
vs2013/: mp4v2.autopkg  mp4v2.sln
vs2013/include/mp4v2/: project.h
vs2013/libmp4v2/: libmp4v2.vcxproj
vs2013/mp4art/: mp4art.vcxproj
vs2013/mp4info/: mp4info.vcxproj
vs2013/mp4subtitle/: mp4subtitle.vcxproj
vs2013/mp4tags/: mp4tags.vcxproj
vstudio10.0/: mp4v2.opensdf
vstudio10.0/libmp4v2/: libmp4v2.vcxproj
vstudio10.0/mp4art/: mp4art.vcxproj
vstudio10.0/mp4chaps/: mp4chaps.vcxproj
vstudio10.0/mp4extract/: mp4extract.vcxproj
vstudio10.0/mp4file/: mp4file.vcxproj
vstudio10.0/mp4info/: mp4info.vcxproj
vstudio10.0/mp4subtitle/: mp4subtitle.vcxproj
vstudio10.0/mp4tags/: mp4tags.vcxproj
vstudio10.0/mp4track/: mp4track.vcxproj
vstudio10.0/mp4trackdump/: mp4trackdump.vcxproj
vstudio9.0/: mp4v2.sln
xcodeproj/mp4v2.xcodeproj/: project.pbxproj
xcodeproj/mp4v2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
